--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="pt-br">
     <head>
-        <title>Minha Página</title>
+        <title>Minha Página Pessoal</title>
         <meta charset="utf-8">
         <link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="css/style.css">
@@ -14,27 +14,27 @@
             <div class="collapse navbar-collapse">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#quemsomos">Quem somos</a>
+                        <a class="nav-link" href="#quemsomos"> Em transição de Carreira</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#parceiros">Parceiros</a>
+                        <a class="nav-link" href="#parceiros">Informações</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#servicos">Serviços</a>
+                        <a class="nav-link" href="#servicos">FORMAÇÃO</a>
                     </li>
                 </ul>
             </div>
         </nav>
         <section id="quemsomos">
             <div class="container-fluid quem-somos text-center margin">
-                <h3>Quem Somos</h3>
+                <h3>Quem Sou?</h3>
                 <img src="img/time.jpg" class="rounded-circle" width="400" height="400">
-                <h3>Somos um time comprometido com os resultados</h3>
+                <h3>Sou uma iniciante no mundo da Tecnologia</h3>
             </div>
         </section>
         <section id="parceiros">
             <div class="container-fluid text-center margin">
-                <h3>PARCEIROS</h3>
+                <h3>INFORMAÇÕES</h3>
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
@@ -49,7 +49,7 @@
         </section>
         <section id="servicos">
             <div class="container-fluid text-center margin">
-                <h3>SERVIÇOS</h3>
+                <h3>FORMAÇÃO</h3>
                 <div class="container">
                     <div class="row">
                         <div class="col-lg-6">
